--- a/index.html
+++ b/index.html
@@ -234,6 +234,10 @@ header img{height:40px;width:auto;border-radius:6px;}
   }
 }
 
+.notice-ticker span:hover,
+.headline-ticker span:hover {
+  animation-play-state: paused;
+}
 
 
 </style>
