--- a/index.html
+++ b/index.html
@@ -262,14 +262,21 @@ button:active {
   box-shadow: 0 4px #372db5, 0 4px 6px rgba(0,0,0,0.15);
 }
 
-/* अलग-अलग color buttons (login/logout/save) */
-#loginBtn { background: linear-gradient(145deg,#10b981,#059669); box-shadow: 0 6px #047857; }
-#logoutBtn { background: linear-gradient(145deg,#ef4444,#b91c1c); box-shadow: 0 6px #7f1d1d; }
-#saveNoticeBtn { background: linear-gradient(145deg,#f59e0b,#b45309); box-shadow: 0 6px #78350f; }
-#addTextBtn { background: linear-gradient(145deg,#3b82f6,#1d4ed8); box-shadow: 0 6px #1e40af; }
-#addImageBtn { background: linear-gradient(145deg,#8b5cf6,#6d28d9); box-shadow: 0 6px #5b21b6; }
-#publishBtn { background: linear-gradient(145deg,#22c55e,#15803d); box-shadow: 0 6px #166534; }
 
+
+/* Different gradients for each button */
+#loginBtn { background: linear-gradient(135deg,#22c55e,#10b981); box-shadow:0 6px #059669; }
+#logoutBtn { background: linear-gradient(135deg,#ef4444,#f87171); box-shadow:0 6px #b91c1c; }
+#saveNoticeBtn { background: linear-gradient(135deg,#f59e0b,#fbbf24); box-shadow:0 6px #b45309; }
+#addTextBtn { background: linear-gradient(135deg,#3b82f6,#60a5fa); box-shadow:0 6px #1d4ed8; }
+#addImageBtn { background: linear-gradient(135deg,#8b5cf6,#a78bfa); box-shadow:0 6px #6d28d9; }
+#publishBtn { background: linear-gradient(135deg,#22d3ee,#06b6d4); box-shadow:0 6px #0e7490; }
+
+
+
+
+
+  
 </style>
 
 </head>
