--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ button:active {
       
       
       <a href="story.html" class="block px-3 py-1 hover:bg-blue-100">Story</a>
-      <a href="#" class="block px-3 py-1 hover:bg-blue-100">Gumshuda</a>
+      <a href="gumshuda.html" class="block px-3 py-1 hover:bg-blue-100">Gumshuda</a>
       <a href="lawarish.html" class="block px-3 py-1 hover:bg-blue-100">Lawarish</a>
       <a href="crime.html" class="block px-3 py-1 hover:bg-blue-100">Crime</a>
 
