--- a/index.html
+++ b/index.html
@@ -352,6 +352,10 @@ body {
 <!-- Footer Start -->
 <footer class="fixed bottom-0 w-full bg-gray-900 text-white flex justify-center items-center p-2 z-50">
   <div class="flex space-x-2">
+
+    
+    
+     <a href="https://marathi-crime-files.onrender.com/" class="footer-btn">Home</a>
     <a href="contact.html" class="footer-btn">Contact</a>
     <a href="about.html" class="footer-btn">About</a>
     <a href="privacy.html" class="footer-btn">Privacy</a>
