--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Marathi Crime Files</title>
+<title>मराठी क्राइम फाईल्स</title>
 <script src="https://cdn.tailwindcss.com"></script>
 
 <script type="module">
@@ -287,7 +287,7 @@ body{padding-bottom:50px;}
 <header>
   <div class="flex items-center space-x-2">
     <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="Logo">
-    <h1 class="font-bold text-base sm:text-lg">Marathi Crime Files</h1>
+    <h1 class="font-bold text-base sm:text-lg">मराठी क्राइम फाईल्स</h1>
   </div>
   <div class="relative">
     <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
