--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>मराठी क्राइम फाईल्स</title>
-
-<!-- Dynamic OG tags for social sharing -->
-<meta property="og:title" content="Loading title...">
-<meta property="og:description" content="Loading description...">
-<meta property="og:image" content="https://yourwebsite.com/default-image.jpg">
-<meta property="og:url" content="">
-<meta property="og:type" content="website">
-
 <script src="https://cdn.tailwindcss.com"></script>
+
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, addDoc, doc, setDoc, deleteDoc, onSnapshot, query, orderBy, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getFirestore, collection, addDoc, doc, setDoc, deleteDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 // Firebase Config
 const firebaseConfig = {
@@ -131,7 +124,7 @@ document.getElementById("publishBtn").onclick = async () => {
   alert("News Published!");
 };
 
-// Load and Render Posts with Share Button
+// Load and Render Posts
 onSnapshot(query(collection(db, "news"), orderBy("time", "desc")), (snap) => {
   const posts = snap.docs.map(d => ({ id: d.id, ...d.data() }));
   renderPosts(posts);
@@ -149,22 +142,8 @@ function renderPosts(posts) {
       <div class="card-body">
         <h3>${post.title}</h3>
         <p>${firstText}...</p>
-        <button class="share-btn">Share</button>
       </div>`;
-
-    // Share button click
-    card.querySelector(".share-btn").onclick = (e) => {
-      e.stopPropagation(); // prevent card click
-      const shareUrl = `${window.location.origin}/post.html?newsId=${post.id}`;
-      const shareText = post.blocks.find(b=>b.type==="text")?.text.substring(0,100) || post.title;
-      const shareImage = post.blocks.find(b=>b.type==="image")?.url || "";
-      const whatsappLink = `https://wa.me/?text=${encodeURIComponent(shareText + "\n" + shareUrl)}`;
-      window.open(whatsappLink, "_blank");
-    };
-
-    // Card click opens modal
     card.onclick = () => showModal(post);
-
     postsArea.appendChild(card);
   });
 
@@ -179,6 +158,7 @@ function showModal(post) {
     else modalContent.innerHTML += `<img src='${b.url}' class='w-full mb-2 rounded'>`;
   });
 
+  // Delete button for Admin
   const user = auth.currentUser;
   if (user && user.email === ADMIN_EMAIL) {
     const delBtn = document.createElement("button");
@@ -197,10 +177,14 @@ function showModal(post) {
 }
 
 // Close Modal
-modalBg.onclick = (e) => { if (e.target === modalBg) modalBg.style.display = "none"; };
+modalBg.onclick = (e) => {
+  if (e.target === modalBg) modalBg.style.display = "none";
+};
 
 // Menu Toggle
-window.toggleMenu = function () { document.getElementById("menuList").classList.toggle("hidden"); };
+window.toggleMenu = function () {
+  document.getElementById("menuList").classList.toggle("hidden");
+};
 
 // Notice Update
 document.getElementById("saveNoticeBtn").onclick = async () => {
@@ -212,7 +196,9 @@ document.getElementById("saveNoticeBtn").onclick = async () => {
 
 // Live Notice Scroll
 onSnapshot(doc(db, "settings", "notice"), (snap) => {
-  if (snap.exists()) noticeText.textContent = snap.data().text;
+  if (snap.exists()) {
+    noticeText.textContent = snap.data().text;
+  }
 });
 
 // Carousel Upload & Animation
@@ -236,7 +222,11 @@ onSnapshot(doc(db, "settings", "carousel"), (snap) => {
   if (snap.exists()) {
     carouselImages = snap.data().images || [];
     carouselInner.innerHTML = "";
-    carouselImages.forEach(url => { const img = document.createElement("img"); img.src = url; carouselInner.appendChild(img); });
+    carouselImages.forEach(url => {
+      const img = document.createElement("img");
+      img.src = url;
+      carouselInner.appendChild(img);
+    });
     currentIndex = 0;
     if (carouselInterval) clearInterval(carouselInterval);
     if (carouselImages.length > 1) {
@@ -247,29 +237,9 @@ onSnapshot(doc(db, "settings", "carousel"), (snap) => {
     }
   }
 });
-
-// ✅ Dynamic OG tags for single post page
-const urlParams = new URLSearchParams(window.location.search);
-const newsId = urlParams.get("newsId");
-if(newsId) {
-  async function updateOGTags() {
-    const docRef = doc(db, "news", newsId);
-    const docSnap = await getDoc(docRef);
-    if(docSnap.exists()) {
-      const post = docSnap.data();
-      document.title = post.title;
-      document.querySelector('meta[property="og:title"]').setAttribute("content", post.title);
-      document.querySelector('meta[property="og:description"]').setAttribute("content", post.blocks.find(b=>b.type==="text")?.text.substring(0,100) || "");
-      document.querySelector('meta[property="og:image"]').setAttribute("content", post.blocks.find(b=>b.type==="image")?.url || "https://yourwebsite.com/default-image.jpg");
-      document.querySelector('meta[property="og:url"]').setAttribute("content", window.location.href);
-    }
-  }
-  updateOGTags();
-}
 </script>
 
 <style>
-/* Tailwind and custom styles from your original code remain unchanged */
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;}
 header img{height:40px;width:auto;border-radius:6px;}
@@ -288,10 +258,20 @@ header img{height:40px;width:auto;border-radius:6px;}
 .notice-ticker span,.headline-ticker span{display:inline-block;white-space:nowrap;animation:scroll-left 18s linear infinite;}
 @keyframes scroll-left{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
 .notice-ticker span:hover,.headline-ticker span:hover{animation-play-state:paused;}
+button{border:none;border-radius:8px;padding:8px 14px;font-weight:600;cursor:pointer;transition:all 0.2s ease;color:white;}
+#loginBtn{background:linear-gradient(135deg,#22c55e,#10b981);}
+#logoutBtn{background:linear-gradient(135deg,#ef4444,#f87171);}
+#saveNoticeBtn{background:linear-gradient(135deg,#f59e0b,#fbbf24);}
+#addTextBtn{background:linear-gradient(135deg,#3b82f6,#60a5fa);}
+#addImageBtn{background:linear-gradient(135deg,#8b5cf6,#a78bfa);}
+#publishBtn{background:linear-gradient(135deg,#22d3ee,#06b6d4);}
 body{padding-bottom:50px;}
-/* Carousel and share button styles remain same */
-.share-btn { background:#3b82f6;color:white;border-radius:6px;padding:5px 10px;font-weight:600;margin-top:5px;width:100%;cursor:pointer;transition: all 0.2s ease-in-out; }
-.share-btn:hover { background:#2563eb; }
+
+/* Carousel Styles */
+#imageCarousel{width:100%;height:250px;overflow:hidden;position:relative;border-radius:10px;margin-bottom:10px;}
+#carouselInner{display:flex;transition:transform 1s ease-in-out;height:100%;}
+#carouselInner img{flex-shrink:0;width:100%;height:100%;object-fit:cover;}
+@media (max-width:640px){#imageCarousel{height:180px;}}
 </style>
 </head>
 <body>
@@ -348,6 +328,8 @@ body{padding-bottom:50px;}
 <!-- Modal -->
 <div id="modalBg"><div id="modalContent"></div></div>
 
+
+
 <!-- Animated Footer Strip -->
 <footer class="fixed bottom-0 w-full flex justify-center items-center space-x-2 py-1 z-50 animated-footer">
   <a href="about.html" class="footer-btn">About</a>
@@ -356,5 +338,55 @@ body{padding-bottom:50px;}
   <a href="terms.html" class="footer-btn">T&C</a>
 </footer>
 
+<style>
+.animated-footer {
+  background: linear-gradient(135deg,#1f2937,#111827,#1f2937);
+  background-size: 400% 400%;
+  animation: gradientShift 8s ease infinite;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.2);
+}
+
+@keyframes gradientShift {
+  0% {background-position:0% 50%;}
+  50% {background-position:100% 50%;}
+  100% {background-position:0% 50%;}
+}
+
+.footer-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  font-size: 11px;
+  padding: 3px 6px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.3), -1px -1px 3px rgba(255,255,255,0.05);
+  transition: all 0.2s ease-in-out;
+  text-align: center;
+}
+
+.footer-btn:hover {
+  transform: translateY(-2px) scale(1.05);
+  box-shadow: 2px 4px 6px rgba(0,0,0,0.4), -2px -2px 6px rgba(255,255,255,0.1);
+  animation: pulse 1s infinite alternate;
+}
+
+@keyframes pulse {
+  0% {transform: translateY(-2px) scale(1.05);}
+  100% {transform: translateY(-2px) scale(1.1);}
+}
+
+@media (max-width:640px){
+  .footer-btn {
+    font-size:9px;
+    padding:2px 4px;
+  }
+}
+</style>
+
+
+
+  
 </body>
 </html>
